cutoff paragraph fixed
fixed paragraph from cutting off

--- a/main.css
+++ b/main.css
@@ -267,6 +267,9 @@ p {
     width: 33%;
     height: 100%;
   }
+  .cutoff-p {
+    max-width: 50vw;  
+  }
 }
 /* ---------------------------------------------- */
 
